Enum UserStatus has added in the auth service